--- a/static/styles/mobile.less
+++ b/static/styles/mobile.less
@@ -56,6 +56,14 @@
     font-size: 1.8em;
   }
 
+  &:before {
+    left: 0;
+  }
+
+  &:after {
+    right: 0;
+  }
+
   &__author {
     font-size: 1.3em;
     text-align: left;
